fix scroll on mobile ??

--- a/sass/media.scss
+++ b/sass/media.scss
@@ -121,7 +121,7 @@
 	//-- FOOTER
 	.links {
 		margin-left: auto;
-		position: fixed;
+		position: absolute;
 		bottom: 20px;
 		left: 0;
 		width: calc(100% - 40px);
